--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "rxjs": "^5.2.0",
     "systemjs": "^0.19.47",
     "tslint": "^5.8.0",
-    "zone.js": "^0.8.5"
+    "zone.js": "^0.8.5",
+    "socket.io-client": "^1.7.3",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^6.0.60",
