--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/socket.io-client": "^1.4.31",
     "core-js": "^2.4.1",
     "rxjs": "^5.2.0",
+    "socket.io-client": "^1.7.3",
+    "socketio": "^1.0.0",
     "systemjs": "^0.19.47",
     "tslint": "^5.8.0",
-    "zone.js": "^0.8.5",
-    "socket.io-client": "^1.7.3",
-    "socketio": "^1.0.0"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@types/node": "^6.0.60",
